[tool.poetry]
name = "mymetrics"
version = "0.1.0"
description = ""
authors = ["Geidel Guerra <github.6870z@passmail.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
